--- a/content/lessons/11/Class-Coding-Lab/CCL-Web-Services-And-APIs.ipynb
+++ b/content/lessons/11/Class-Coding-Lab/CCL-Web-Services-And-APIs.ipynb
@@ -11,8 +11,14 @@
       },
       "cell_type": "code",
       "source": "# Run this to make sure you have the pre-requisites!\n!pip install -q requests",
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "\u001b[33mWARNING: You are using pip version 19.1, however version 19.1.1 is available.\r\nYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -25,7 +31,7 @@
       },
       "cell_type": "code",
       "source": "# start by importing the modules we will need\nimport requests\nimport json ",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -39,7 +45,7 @@
       },
       "cell_type": "code",
       "source": "url = 'https://nominatim.openstreetmap.org/search?q=Hinds+Hall+Syracuse+University&format=json'\nresponse = requests.get(url)",
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -53,11 +59,11 @@
       },
       "cell_type": "code",
       "source": "response.ok # did the request work?",
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 6,
+          "execution_count": 5,
           "data": {
             "text/plain": "True"
           },
@@ -71,11 +77,11 @@
       },
       "cell_type": "code",
       "source": "response.text  # what's in the body of the response, as a raw string",
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 7,
+          "execution_count": 6,
           "data": {
             "text/plain": "'[{\"place_id\":111351825,\"licence\":\"Data © OpenStreetMap contributors, ODbL 1.0. https://osm.org/copyright\",\"osm_type\":\"way\",\"osm_id\":156759804,\"boundingbox\":[\"43.0381177\",\"43.0384201\",\"-76.1337397\",\"-76.1329516\"],\"lat\":\"43.03821555\",\"lon\":\"-76.1333456417294\",\"display_name\":\"Hinds Hall, 110, Smith Drive, University Hill, Syracuse, Onondaga County, New York, 13244, USA\",\"class\":\"building\",\"type\":\"yes\",\"importance\":0.411}]'"
           },
@@ -94,11 +100,11 @@
       },
       "cell_type": "code",
       "source": "geodata = response.json()  # try to decode the response from JSON format\ngeodata                    # this is now a Python object variable",
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 8,
+          "execution_count": 7,
           "data": {
             "text/plain": "[{'boundingbox': ['43.0381177', '43.0384201', '-76.1337397', '-76.1329516'],\n  'class': 'building',\n  'display_name': 'Hinds Hall, 110, Smith Drive, University Hill, Syracuse, Onondaga County, New York, 13244, USA',\n  'importance': 0.411,\n  'lat': '43.03821555',\n  'licence': 'Data © OpenStreetMap contributors, ODbL 1.0. https://osm.org/copyright',\n  'lon': '-76.1333456417294',\n  'osm_id': 156759804,\n  'osm_type': 'way',\n  'place_id': 111351825,\n  'type': 'yes'}]"
           },
@@ -117,7 +123,7 @@
       },
       "cell_type": "code",
       "source": "lat = geodata[0]['lat']\nlon =geodata[0]['lon']\nprint(lat, lon)",
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,11 +143,11 @@
       },
       "cell_type": "code",
       "source": "type(lat), type(lon)",
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
-          "execution_count": 10,
+          "execution_count": 9,
           "data": {
             "text/plain": "(str, str)"
           },
@@ -160,7 +166,7 @@
       },
       "cell_type": "code",
       "source": "lat = float(geodata[0]['lat'])\nlon = float(geodata[0]['lon'])\nprint(\"Latitude: %f, Longitude: %f\" % (lat, lon))",
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +186,7 @@
       },
       "cell_type": "code",
       "source": "# todo:\ngeodata = response.json()\ngeodata\n# retrieve the place_id put in a variable\nplace = response.get(place_id)\n# retrieve the formatted_address put it in a variable\naddress = response.get(formatted_address)\n# print both of them out\nprint(p_id,address)\n\n\n",
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "error",
@@ -189,7 +195,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-22-c294dd2b7365>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgeodata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# retrieve the place_id put in a variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplace_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# retrieve the formatted_address put it in a variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0maddress\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformatted_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-c294dd2b7365>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mgeodata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# retrieve the place_id put in a variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mplace\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplace_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m# retrieve the formatted_address put it in a variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0maddress\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mformatted_address\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mAttributeError\u001b[0m: 'Response' object has no attribute 'get'"
           ]
         }
@@ -202,12 +208,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = 'https://nominatim.openstreetmap.org/search'  # base URL without paramters after the \"?\"\nsearch = 'Hinds Hall Syracuse University'\noptions = { 'q' : search, 'format' : 'json'}\nresponse = requests.get(url, params = options)            \ngeodata = response.json()\ncoords = { 'lat' : float(geodata[0]['lat']), 'lng' : float(geodata[0]['lon']) }\nprint(\"Search for:\", search)\nprint(\"Coordinates:\", coords)\nprint(\"%s is located at (%f,%f)\" %(search, coords['lat'], coords['lng']))",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "Search for: Hinds Hall Syracuse University\nCoordinates: {'lat': 43.03821555, 'lng': -76.1333456417294}\nHinds Hall Syracuse University is located at (43.038216,-76.133346)\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -216,12 +228,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = 'https://nominatim.openstreetmap.org/search'  # base URL without paramters after the \"?\"\nsearch = input(\"Enter a loacation to Geocode: \")\noptions = { 'q' : search, 'format' : 'json'}\nresponse = requests.get(url, params = options)            \ngeodata = response.json()\ncoords = { 'lat' : float(geodata[0]['lat']), 'lng' : float(geodata[0]['lon']) }\nprint(\"Search for:\", search)\nprint(\"Coordinates:\", coords)\nprint(\"%s is located at (%f,%f)\" %(search, coords['lat'], coords['lng']))",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter a loacation to Geocode: Queens, NY\nSearch for: Queens, NY\nCoordinates: {'lat': 40.6524927, 'lng': -73.7914214158161}\nQueens, NY is located at (40.652493,-73.791421)\n"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -230,12 +248,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "def get_coordinates(search):\n    url = 'https://nominatim.openstreetmap.org/search'  # base URL without paramters after the \"?\"\n    options = { 'q' : search, 'format' : 'json'}\n    response = requests.get(url, params = options)            \n    geodata = response.json()\n    coords = { 'lat' : float(geodata[0]['lat']), 'lng' : float(geodata[0]['lon']) }\n    return coords\n\n# main program here:\nlocation = input(\"Enter a location: \")\ncoords = get_coordinates(location)\nprint(\"%s is located at (%f,%f)\" %(location, coords['lat'], coords['lng']))\n",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Enter a location: Queens, NY\nQueens, NY is located at (40.652493,-73.791421)\n"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -244,21 +268,39 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# 'you suck' == 'negative'\nurl = 'http://text-processing.com/api/sentiment/'\noptions = { 'text' : 'you suck'}\nresponse = requests.post(url, data = options)\nsentiment = response.json()\nsentiment",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 15,
+          "data": {
+            "text/plain": "{'label': 'neg',\n 'probability': {'neg': 0.520097595188211,\n  'neutral': 0.3886824782142297,\n  'pos': 0.479902404811789}}"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# 'I love cheese' == 'positive'\nurl = 'http://text-processing.com/api/sentiment/'\noptions = { 'text' : 'I love cheese'}\nresponse = requests.post(url, data = options)\nsentiment = response.json()\nsentiment",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 16,
+          "data": {
+            "text/plain": "{'label': 'pos',\n 'probability': {'neg': 0.3866732207796809,\n  'neutral': 0.18366003088446245,\n  'pos': 0.6133267792203191}}"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "metadata": {},
@@ -267,12 +309,21 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "tweet = \"Arnold Schwarzenegger isn't voluntarily leaving the Apprentice, he was fired by his bad (pathetic) ratings, not by me. Sad end to a great show\"\nurl = 'http://text-processing.com/api/sentiment/'\noptions = { 'text' : tweet }\nresponse = requests.post(url, data = options)\nsentiment = response.json()\nsentiment",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "execution_count": 17,
+          "data": {
+            "text/plain": "{'label': 'neg',\n 'probability': {'neg': 0.8406241500282121,\n  'neutral': 0.298451882823427,\n  'pos': 0.1593758499717879}}"
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "metadata": {},
@@ -281,11 +332,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "# todo write code here\n\n",
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -300,11 +351,11 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = \"http://this is not a website\"\ntry:\n\n    response = requests.get(url)  # throws an exception when it cannot connect\n\n# internet is broken\nexcept requests.exceptions.RequestException as e:\n    print(\"ERROR: Cannot connect to \", url)\n    print(\"DETAILS:\", e)",
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -314,12 +365,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = 'http://www.syr.edu/mikeisawesum'  # this should 404\ntry:\n    \n    response = requests.get(url)\n    \n    if response.ok:  # same as response.status_code == 200\n        data = response.text\n    else: # Some other non 200 response code\n        print(\"There was an Error requesting:\", url, \" HTTP Response Code: \", response.status_code)\n\n# internet is broken\nexcept requests.exceptions.RequestException as e: \n    print(\"ERROR: Cannot connect to \", url)\n    print(\"DETAILS:\", e)\n",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "There was an Error requesting: http://www.syr.edu/mikeisawesum  HTTP Response Code:  404\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -328,12 +385,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = 'http://www.syr.edu/mikeisawesum'  # this should 404\ntry:\n    \n    response = requests.get(url)  # throws an exception when it cannot connect\n    response.raise_for_status()   # throws an exception when not 'ok'\n    data = response.text\n\n# response not ok\nexcept requests.exceptions.HTTPError as e:\n    print(\"ERROR: Response from \", url, 'was not ok.')\n    print(\"DETAILS:\", e)\n        \n# internet is broken\nexcept requests.exceptions.RequestException as e: \n    print(\"ERROR: Cannot connect to \", url)\n    print(\"DETAILS:\", e)\n",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "ERROR: Response from  http://www.syr.edu/mikeisawesum was not ok.\nDETAILS: 404 Client Error: Not Found for url: https://www.syracuse.edu/mikeisawesum\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -342,12 +405,18 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "url = 'http://www.syr.edu' # this is HTML, not JSON\ntry:\n\n    response = requests.get(url)  # throws an exception when it cannot connect\n    response.raise_for_status()   # throws an exception when not 'ok'\n    data = response.json()        # throws an exception when cannot decode json\n    \n# cannot decode json\nexcept json.decoder.JSONDecodeError as e: \n    print(\"ERROR: Cannot decode the response into json\")\n    print(\"DETAILS\", e)\n\n# response not ok\nexcept requests.exceptions.HTTPError as e:\n    print(\"ERROR: Response from \", url, 'was not ok.')\n    print(\"DETAILS:\", e)\n        \n# internet is broken\nexcept requests.exceptions.RequestException as e: \n    print(\"ERROR: Cannot connect to \", url)\n    print(\"DETAILS:\", e)",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": "ERROR: Cannot decode the response into json\nDETAILS Expecting value: line 1 column 1 (char 0)\n",
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {},
@@ -356,10 +425,19 @@
     },
     {
       "metadata": {
-        "trusted": false
+        "trusted": true
       },
       "cell_type": "code",
       "source": "def get_coordinates_using_google(location):\n    options = { 'address' : location }  \n    response = requests.get(url, params = options)            \n    geodata = response.json()\n    coords = geodata['results'][0]['geometry']['location']\n    return coords\n\n# todo write code here to input a location, look up coordinates, and print\n# it should handle errors!!!\n\n\n",
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true
+      },
+      "cell_type": "code",
+      "source": "",
       "execution_count": null,
       "outputs": []
     }
