--- a/content/lessons/09/Now-You-Code/NYC1-Funnynames.ipynb
+++ b/content/lessons/09/Now-You-Code/NYC1-Funnynames.ipynb
@@ -15,18 +15,9 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "# Step 2: write function\n# this function reads from \"NYC-funnynames.txt\" places the names in a list.\n# program should return a list of names\ndef read_names(): \n    names[]\n    #todo write code here\n\n",
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-58-a99bd1d32452>, line 8)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-58-a99bd1d32452>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    names[]\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "source": "# Step 2: write function\n# this function reads from \"NYC-funnynames.txt\" places the names in a list.\n# program should return a list of names\ndef read_names(): \n    names = []\n    \n    #todo write code here\n    with open('NYC1-funnynames.txt', 'r') as f:\n        names = f.readlines()",
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "metadata": {
@@ -40,13 +31,19 @@
         "trusted": true
       },
       "cell_type": "code",
-      "source": "## Step 4: write entire program making sure to use read_names \n",
-      "execution_count": 56,
+      "source": "## Step 4: write entire program making sure to use read_names \nread_names\nfor names in read_names:\n    print(names)",
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": "[]\n",
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'function' object is not iterable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-10bda77d53a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## Step 4: write entire program making sure to use read_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mread_names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mread_names\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'function' object is not iterable"
+          ]
         }
       ]
     },
